# test_json_load

./: Cargo.toml  Trunk.toml  index.html  publish.bat
docs/: index.html  yew-json-app-f8d12f7be0fdd7d.js  yew-json-app-f8d12f7be0fdd7d_bg.wasm
src/: main.rs
static/: data.json
